<resources>
    <string name="app_name">Wisata Brebes</string>
    <string name="kuliner">KULINER</string>
    <string name="todo">TODO</string>
    <string name="buttonback">Button</string>
    <string name="menutexview">Menu</string>
    <string name="buttonwisata">ImageButton</string>
    <string name="buttonkuliner">ImageButton</string>
    <string name="buttonhotel">ImageButton</string>
    <string name="buttontentang">ImageButton</string>
    <string name="todo1">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo3">TODO</string>
    <string name="backgroundwisata">backgroundwisata</string>
    <string name="button11">Button</string>
    <string name="button13">Button</string>
    <string name="button14">Button</string>
    <string name="button12">Button</string>
    <string name="gambarwisata1">TODO</string>
    <string name="buttonpertama">Button</string>
    <string name="buttonkedua">Button</string>
    <string name="buttonketiga">Button</string>
    <string name="buttonkeempat">Button</string>
    <string name="todo23">TODO</string>
    <string name="menupertama">MENU</string>
    <string name="menu_wisata">MENU WISATA</string>
    <string name="menu_hotel">MENU HOTEL</string>
    <string name="menu_kuliner">MENU KULINER</string>
    <string name="splash12">TODO</string>
    <string name="textview">TextView</string>
    <string name="todowisatakaligua">TODO</string>
    <string name="todowisatakaligua1">TODO</string>
    <string name="todobackgroundiwastakaligua">TODO</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="agrowisata_kaligua_adalah_kawasan_wisata_agro_dataran_tinggi_yang_terletak_di_desa_pandansari_kecamatan_paguyangan_kabupaten_brebes_jawa_tengah_tepatnya_di_wilayah_brebes_bagian_selatan_agrowisata_kaligua_dikelola_oleh_pt_perkebunan_nusantara_ix_persero_jawa_tengah_dan_merupakan_diversifikasi_usaha_untuk_meningkatkan_optimalisasi_aset_perusahaan_dengan_daya_dukung_potensi_alam_yang_indah_hasil_pengolahan_perkebunan_teh_kaligua_adalah_berupa_produk_hilir_teh_hitam_black_tea_dengan_merk_kaligua_dalam_kemasan_teh_celup_dan_serbuk_wisatawan_yang_berkunjung_dapat_menikmati_hangatnya_teh_hitam_kaligua_langsung_di_lokasi_atau_membelinya_sebagai_oleh_oleh">Agrowisata Kaligua adalah kawasan wisata agro dataran tinggi yang terletak di Desa Pandansari, Kecamatan Paguyangan, Kabupaten Brebes, Jawa Tengah, tepatnya di wilayah Brebes bagian selatan. Agrowisata Kaligua dikelola oleh PT Perkebunan Nusantara IX (Persero) Jawa Tengah, hasil pengolahan perkebunan teh Kaligua adalah berupa produk hilir teh hitam (black tea) dengan merk \'Kaligua\' dalam kemasan teh celup dan serbuk. Wisatawan yang berkunjung dapat menikmati hangatnya teh hitam Kaligua langsung di lokasi atau membelinya sebagai oleh-oleh.\n</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="kawasan_wisata_agro_kaligua_memberikan_banyak_pilihan_untuk_wisata_di_samping_kebun_teh_terdapat_beberapa_situs_wisata_menarik_yang_berada_di_seputaran_kaligua_misalnya_gua_jepang_tuk_benih_gua_angin_serta_makam_pendiri_kebun_van_de_jong_beberapa_vila_milik_perkebunan_bisa_dimanfaatkan_oleh_pengunjung_yang_ingin_bermalam_untuk_melayani_wisatawan_pihak_perkebunan_menyediakan_fasilitas_homestay_penginapan_yang_cukup_baik_di_samping_itu_tersedia_pula_gedung_pertemuan_area_outbond_area_perkemahan_lapangan_olahraga_kafe_pusat_layanan_kesehatan_sarana_ibadah_dan_lain_lain_selain_itu_pengunjung_dapat_memilih_beberapa_paket_wisata_yang_disediakan">Kawasan wisata agro Kaligua memberikan banyak pilihan untuk wisata. Di samping kebun teh, terdapat beberapa situs wisata menarik yang berada di seputaran Kaligua. Misalnya Gua Jepang, Tuk Benih, Gua Angin, serta makam pendiri kebun Van De Jong. Beberapa vila milik perkebunan bisa dimanfaatkan oleh pengunjung yang ingin bermalam. Untuk melayani wisatawan, pihak perkebunan menyediakan fasilitas homestay (penginapan) yang cukup baik. Di samping itu tersedia pula gedung pertemuan, area outbond, area perkemahan, lapangan olahraga, kafe, pusat layanan kesehatan, sarana ibadah, dan lain-lain. Selain itu, pengunjung dapat memilih beberapa paket wisata yang disediakan.\n</string>
    <string name="title_activity_maps_kaligua">Map</string>
    <string name="lokasikaligua">Lokasi</string>
    <string name="agrowisata_kaligua_terletak_sekitar_10_kilometer_dari_arah_kota_kecamatan_paguyangan_atau_sekitar_15_kilometer_dari_bumiayu_transportasi_menuju_lokasi_dapat_ditempuh_melalui_jalur_pantura_via_brebes_atau_tegal_bumiayu_kaligua_cirebon_bumiayu_kaligua_dan_jalur_selatan_via_purwokerto_paguyangan_kaligua_jalur_tersebut_melalui_jalan_utama_tegal_purwokerto_tepat_masuk_lewat_pertigaan_kaligua_kretek">Agrowisata Kaligua terletak sekitar 10 kilometer dari arah kota Kecamatan Paguyangan atau sekitar 15 kilometer dari Bumiayu. Transportasi menuju lokasi dapat ditempuh melalui jalur Pantura via Brebes atau Tegal-Bumiayu-Kaligua, Cirebon-Bumiayu-Kaligua, dan jalur selatan via Purwokerto-Paguyangan-Kaligua. Jalur tersebut melalui jalan utama Tegal-Purwokerto, tepat masuk lewat pertigaan Kaligua, Kretek.\n\nAlamat:\nPTPN IX Kebun Kaligua, Dusun Kaligua, Pandansari, Paguyangan, Kabupaten Brebes, Jawa Tengah.\n</string>
    <string name="lokasi_wisata">Lokasi Wisata</string>
    <string name="harga_tiket">Harga Tiket</string>
    <string name="tiket_masuk_ke_kawasan_wisata_kebun_teh_rp_8_000_per_orang_ntiket_masuk_ke_goa_jepang_rp_rp_3_000_per_orang_ntiket_masuk_ke_tuk_bening_rp_3_000_per_orang_ntiket_masuk_camping_rombongan_rp_8_000_per_orang">Tiket masuk ke kawasan Wisata Kebun Teh: Rp 8.000 per orang.\nTiket masuk ke Goa Jepang: Rp 3.000 per orang.\nTiket masuk ke Tuk Bening: Rp 3.000 per orang.\nTiket masuk camping rombongan: Rp 8.000 per orang.\n</string>
    <string name="pantai_randusanga_indah_atau_lebih_dikenal_dengan_sebutan_parin_terletak_di_desa_randusanga_kulon_kecamatan_brebes_yakni_sekitar_7_km_dari_jalan_raya_pantura_kota_brebes_disepanjang_jalan_menuju_pantai_randusanga_akan_banyak_ditemui_perkebunan_bawang_merah_yang_menghampar_luas_sedangkan_mendekati_lokasi_pantai_akan_banyak_ditemui_tambak_tambak_yang_umumnya_digunakan_untuk_budidaya_ikan_bandeng_dan_rumput_laut">Pantai Randusanga Indah atau lebih dikenal dengan sebutan PARIN terletak di Desa Randusanga, kecamatan Brebes yakni sekitar 7 km dari jalan raya pantura Kota Brebes. Disepanjang jalan menuju pantai Randusanga akan banyak ditemui perkebunan bawang merah yang menghampar luas, sedangkan mendekati lokasi pantai, akan banyak ditemui tambak-tambak yang umumnya digunakan untuk budidaya ikan bandeng dan rumput laut.\n</string>
    <string name="lokasi_diwilayah_sekitar_pantai_akan_dijumpai_panorama_pantai_yang_masih_alami_disertai_fasilitas_mainan_anak_waterboom_mandi_laut_penggung_gembira_arena_balap_atv_camping_ground_cafe_serta_perahu_wisata_dan_rumah_makan_khas_ikan_laut_bakar_serta_kios_kios_yang_menjual_oleh_oleh_khas_brebes_berupa_telur_asin_dan_bawang_merah">Lokasi diwilayah sekitar pantai akan dijumpai panorama pantai yang masih alami disertai fasilitas mainan anak (waterboom), mandi laut, penggung gembira, arena balap ATV, camping ground, cafe, serta perahu wisata dan rumah makan khas ikan laut bakar serta kios-kios yang menjual oleh-oleh khas Brebes berupa telur asin dan bawang merah.\n</string>
    <string name="tiket_masuk_pantai_rp_15_000_per_orang_nsewa_perahu_rp_15_000_per_orang">Tiket masuk pantai: Rp. 2.000 per orang.\nSewa perahu: Rp. 15.000 per orang.\n</string>
    <string name="pantai_randusanga_atau_yang_sekarang_lebih_dikenal_dengan_pantai_randusanga_indah_parin_berlokasi_di_randusanga_kulon_sekitar_7_km_ke_arah_utara_dari_jalan_raya_pantura_kota_brebes_tepatnya_di_pantai_randusanga_terletak_di_desa_randusanga_kecamatan_brebes_kabupaten_brebes_jawa_tengah">Pantai Randusanga atau yang sekarang lebih dikenal dengan Pantai Randusanga Indah (Parin) berlokasi di sekitar 7 KM ke arah utara dari jalan raya Pantura kota Brebes tepatnya di Desa Randusanga Kecamatan Brebes Kabupaten Brebes, Jawa Tengah.\n\nAlamat:\nPantai Indah Randusanga, Randusanga Wetan, Kecamatan Brebes, Randusanga Wetan, Kec. Brebes, Kabupaten Brebes, Jawa Tengah.\n</string>
    <string name="title_activity_maps_randusanga">MapsRandusanga</string>
    <string name="title_activity_maps_mangrove">MapsMangrove</string>
    <string name="hutan_mangrove_pandansari_ini_berlokasi_di_pesisir_pantai_utara_tepatnya_di_desa_kaliwlingi_kecamatan_brebes_kabupaten_brebes_jawa_tengah_lokasi_hutan_mangrove_ini_cukup_dekat_dari_pusat_kota_brebes_karena_hanya_berjarak_sekitar_10_kilometer_saja_n_nalamat_ndukuh_pandansari_kaliwlingi_kecamatan_brebes_kaliwlingi_kec_brebes_kabupaten_brebes_jawa_tengah">Hutan Mangrove Pandansari ini berlokasi di pesisir pantai utara tepatnya di Desa Kaliwlingi, Kecamatan Brebes, Kabupaten Brebes, Jawa Tengah. Lokasi hutan mangrove ini cukup dekat dari pusat kota Brebes, karena hanya berjarak sekitar 10 kilometer saja.\n\nAlamat:\nDukuh Pandansari, Kaliwlingi, Kec. Brebes, Kabupaten Brebes, Jawa Tengah.\n</string>
    <string name="tiket_masuk_hutan_mangrove_termasuk_sewa_kapal_rp_15_000_per_orang">Tiket masuk hutan mangrove termasuk sewa kapal dari dermaga: Rp. 20.000 per orang.\n</string>
    <string name="lokasi_kuliner">Lokasi Kuliner</string>
    <string name="harga">Harga</string>
    <string name="deskripsi_rujakbelut">Rujak Belut Khas Brebes merupakan makanan khas Brebes berupa daging belut yang dicampur dengan bumbu rujak sambal kacang. Sebelum disajikan belut–belut dibersihkan dengan menggunakan abu gosok dan cairan sabun cuci yang berfungsi untuk menghilangkan kelicinan. Setelah proses pencucian dan pembersihan selesai, kemudian belut di diberi racikan bumbu dapur sederhana, seperti kunyit, jahe, lengkuas dan garam. Dan setelah usai pengolehan dengan bumbu belut dibiarkan 1–2 jam agar bumbu meresap ke tubuh belut, baru belut siap di goreng. Selanjutnya setelah proses penggorengan belut sudah dianggap matang, baru diolah lagi dengan sambal rujak, seperti menggunakan bahan kacang tanah, terasi, garam, lombok. Untuk rasa penunjang agar sambal terasa enak, sambal diberi campuran bawang, tomat dan sedikit jeruk keris dan rujak belut-pun siaap disajikan.\n</string>
    <string name="harga_belut">Rujak Belut: Rp. 25.000 per porsi.\n</string>
    <string name="alamat_rujakbelut"><b>Rujak Belut Mbah Ribut</b>\nJalan Raya Kersana, Ciampel Kulon, Ciampel, Tanjung, Kabupaten Brebes, Jawa Tengah.\n</string>
    <string name="hotel1">Hotel Grand Dian</string>
    <string name="hotel2">Hotel Anggraeni Ketanggungan</string>
    <string name="hotel3">Hotel Dedy Jaya</string>
    <string name="hotel4">Hotel Anggraeni Jatibarang</string>
    <string name="kuliner1"><![CDATA[Kupat Glabet & Sate Blengong]]></string>
    <string name="kuliner2">Rujak Belut Khas Brebes</string>
    <string name="kuliner3">Bakso Gimin Brebes</string>
    <string name="kuliner4">Telur Asin Khas Brebes</string>
    <string name="wisata1">Agrowisata Kaligua Brebes</string>
    <string name="wisata2">Pantai Randusanga Indah</string>
    <string name="wisata3">Hutan Mangrove Pandansari</string>
    <string name="wisata4">Waduk Penjalin</string>
</resources>