<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KulinerRujak">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#03acce"
        android:contentDescription="@string/todobackgroundiwastakaligua" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.synnapps.carouselview.CarouselView
                android:id="@+id/carouselView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="5dp"
                app:fillColor="#FFFFFFFF"
                app:pageColor="#00000000"
                app:radius="3dp"
                app:slideInterval="3000"
                app:strokeColor="#FF777777"
                app:strokeWidth="1dp">
            </com.synnapps.carouselview.CarouselView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                card_view:cardBackgroundColor="#E6E6E6"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="5dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/deskripsi"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto"
                android:text="@string/deskripsi_rujakbelut"
                android:textColor="#FF000000"
                android:textSize="14sp" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                card_view:cardBackgroundColor="#E6E6E6"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="5dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">
            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/harga"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto"
                android:text="@string/harga_belut"
                android:textColor="#FF000000"
                android:textSize="14sp" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                card_view:cardBackgroundColor="#E6E6E6"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="5dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/lokasikaligua"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto"
                android:text="@string/alamat_rujakbelut"
                android:textColor="#FF000000"
                android:textSize="14sp" />
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/buttonmapsrujak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/button_color"
                android:text="@string/lokasi_kuliner" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>